Game of Life builds with Grddle again