@@ -9,6 +9,7 @@ repositories {
 dependencies {
   testImplementation(platform("org.junit:junit-bom:5.10.2"))
   testImplementation("org.junit.jupiter:junit-jupiter")
+  testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
 tasks.test {
@@ -16,6 +17,11 @@ tasks.test {
   testLogging {
     events("passed", "skipped", "failed")
   }
+  jvmArgs("--enable-native-access=ALL-UNNAMED")
+}
+
+tasks.withType<JavaExec> {
+  jvmArgs("--enable-native-access=ALL-UNNAMED")
 }
 
 tasks.jar {
